legacy/cluster/vtt/foundry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry
  namespace: vtt
  labels:
    app: foundry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundry
          image: docker.io/felddy/foundryvtt:13.335.0@sha256:a10e2b83f4d5f592a344b94c05a2fb8deb54253646736f1f57bbe2f079b68308
          ports:
            - containerPort: 30000
          volumeMounts:
            - name: pvc
              mountPath: /data
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: foundry-pvc
