legacy/cluster/vtt/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
  namespace: vtt
spec:
  selector:
    app: foundry
  ports:
    - protocol: TCP
      port: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vtt
  namespace: vtt
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  tls:
    - hosts:
        - vtt.luma.chrismiller.xyz
      secretName: vtt-tls
  rules:
    - host: vtt.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foundry
                port:
                  number: 30000
